--- a/Esercizio/index.html
+++ b/Esercizio/index.html
@@ -33,21 +33,28 @@
       <section id="section2">
         <p class="headings">Tutti ti cercheranno</p>
         <p>
-          Sono 30.000 in Italia le posizioni di developer scoperte, scegli
-          quella che ti stimola di più.
+          Sono 30.000 in Italia le posizioni di <br />
+          developer scoperte, scegli quella che <br />
+          ti stimola di più.
         </p>
 
         <p class="headings">Lavora dove vuoi</p>
-        <p>Lavora da casa, in riva al mare o in montagna.</p>
+        <p>
+          Lavora da casa, in riva al mare o in <br />
+          montagna.
+        </p>
         <img src="./images/notebook.jpg" alt="notebook" id="notebook" />
 
         <p class="headings">Scegli il tuo ruolo</p>
-        <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
+        <p>
+          Potrai scegliere se essere Azienda,<br />
+          Freelance o Startup.
+        </p>
 
         <p class="headings">Lavoro in libertà</p>
         <p>
-          Non serve lavorare in ufficio per essere creatori di prodotti
-          digitali.
+          Non serve lavorare in ufficio per <br />
+          essere creatori di prodotti digitali.
         </p>
       </section>
 
@@ -61,27 +68,31 @@
       </section>
 
       <section class="section3">
-        <div>
+        <div class="img-container">
           <img src="./images/foto1.jpg" alt="foto1" class="images" />
           <p class="headings">Il tuo PC</p>
           <p>
-            Se vuoi diventare developer è l'unico strumento di cui hai bisogno.
+            Se vuoi diventare developer è l'unico <br />
+            strumento di cui hai bisogno.
           </p>
         </div>
 
-        <div>
+        <div class="img-container">
           <img src="./images/foto2.jpg" alt="foto2" class="images" />
           <p class="headings">Impara ora</p>
           <p>
-            Impara da chi diventerai tra qualche anno, e diventa una rockstar
-            come loro.
+            Impara da chi diventerai tra qualche <br />
+            anno, e diventa una rockstar come loro.
           </p>
         </div>
 
-        <div>
+        <div class="img-container">
           <img src="./images/foto3.jpg" alt="foto3" class="images" />
           <p class="headings">Lavora subito</p>
-          <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+          <p>
+            Sappiamo cosa vogliono le aziende, <br />
+            perché lavoriamo con loro.
+          </p>
         </div>
       </section>
     </main>
